--- a/api-gateway/api-gateway-www/pom.xml
+++ b/api-gateway/api-gateway-www/pom.xml
@@ -24,6 +24,10 @@
 			<artifactId>api-common</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
 		</dependency>
