--- a/api-www/api-www-admin/src/main/resources/bootstrap.properties
+++ b/api-www/api-www-admin/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=system
 spring.application.name=api-www-admin
-spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,stream,data,c3p0,bus,feign
+spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,stream,redis,data,c3p0,bus,feign
 spring.cloud.config.fail-fast=true
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=api-config
