--- a/api-config/src/main/resources/config/system/api-www-admin-system.properties
+++ b/api-config/src/main/resources/config/system/api-www-admin-system.properties
@@ -2,5 +2,7 @@
 system.sn=80
 #系统类型
 system.type=380
+#是否开启权限鉴定
+system.security.enable=false
 #不需要鉴权的地址
 system.security.allow.attributes=/login,/logout,/error,/favicon.ico,/actuator/**,/resources/**
