--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		<jaxb-runtime.version>2.3.1</jaxb-runtime.version>
 		<commons-codec.version>1.11</commons-codec.version>
 		<commons-lang3.version>3.8.1</commons-lang3.version>
-		<spring-cloud.version>Greenwich.M1</spring-cloud.version>
+		<spring-cloud.version>Greenwich.RC2</spring-cloud.version>
 		<spring-boot-admin.version>2.0.4</spring-boot-admin.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<mysql-connector-java.version>5.1.47</mysql-connector-java.version>
